--- a/css/me.css
+++ b/css/me.css
@@ -21,40 +21,6 @@ body
   background: url(/res/img/bg.jpg) no-repeat center center fixed;
 }
 
-.navbar
-{
-  width: 100%;
-  font-size: 28px;
-  position: fixed;
-  top: 0;
-  right: 0;
-  padding-right: 50px;
-  border-bottom: 1px solid var(--border);
-  width: 300px;
-  z-index: 400;
-  background: black;
-}
-
-
-.navbar a, .show-email
-{
-  color: var(--text);
-  float: left;
-  display: inline-block;
-  width: 80px;
-  height: 60px;
-  line-height: 50px;
-  text-align: center;
-  line-height:60px;
-}
-
-.navbar a:hover, .navbar a:active, .show-email:hover, .show-email:active
-{
-  text-decoration: none;
-  background: var(--border);
-  cursor: pointer;
-}
-
 .hexagon {
   position: relative;
   width: 200px;
@@ -130,7 +96,7 @@ body
 
 .content
 {
-  width: 1080px;
+  width: 1070px;
   margin: auto;
   background: var(--bg_faded);
   padding-bottom: 1px;
@@ -139,6 +105,7 @@ body
 .top-content
 {
   background: var(--bg);
+  padding-left: 50px;
 }
 
 .profile-img
@@ -317,7 +284,7 @@ video
 .skills
 {
   font-size: 18px;
-  width: 900px;
+  width: 840px;
   display: inline-block;
   float: right;
   margin-top: 50px;
@@ -340,7 +307,7 @@ table
 {
   position: relative;
   z-index: 100;
-  width: 1080px;
+  width: 1070px;
   background: var(--bg);
   border-bottom: 1px solid var(--pri);
 }
@@ -355,9 +322,24 @@ table
   width: 180px;
 }
 
-#catagory button:hover
+#catagory a, .show-email
+{
+  display: inline-block;
+  float: right;
+  height: 45px;
+  width: 55px;
+  font-size: 24px;
+  margin-top: 18px;
+  color: var(--text);
+  text-align: center;
+  line-height: 45px;
+}
+
+#catagory button:hover, #catagory a:hover, .show-email:hover
 {
   background: var(--border);
+  text-decoration: none;
+  cursor: pointer;
 }
 
 #catagory.sticky {
@@ -468,26 +450,18 @@ table
 
 .email
 {
-  position: fixed;
+  position: absolute;
+  top: 66;
   right: 0;
-  top:60;
-  line-height: 40px;
-  height: 70px;
-  padding-top: 30px;
-  font-size: 18px;
-  padding-left: 10px;
-  width: 300px;
+  height: 60px;
+  font-size: 24px;
+  line-height: 58px;
+  text-align: right;
+  padding: 0 40px;
   background: black;
-  border-bottom: 1px solid var(--border);
-  text-align: left;
-  z-index: 101;
+  border: 1px solid var(--pri);
+  border-top: none;
   display: none;
-}
-
-
-.show-email.active
-{
-  background: red;
 }
 
 span.reverse {
