--- a/css/me.css
+++ b/css/me.css
@@ -174,6 +174,12 @@ body
   background: var(--bg);
 }
 
+.item-preview iframe
+{
+  width:650;
+  height: 365;
+}
+
 .item-preview-list
 {
   margin-left: 3px;
@@ -467,4 +473,169 @@ table
 span.reverse {
   unicode-bidi: bidi-override;
   direction: rtl;
+}
+
+@media screen and (max-width: 1081px) {
+
+  html, body
+  {
+    overflow-x:hidden;
+  }
+
+  html, body, .content, #catagory, .item-con, .item
+  {
+    width: 100%;
+    padding-left: 0;
+    padding-right: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  body
+  {
+    background: var(--bg);
+  }
+
+  .item-showcase
+  {
+    width: 100%;
+  }
+
+  .item
+  {
+    margin: 20px 0;
+    border-top: 4px solid var(--border);
+    border-bottom: 4px solid var(--border);
+    padding: 0 0;
+  }
+
+  .item-preview
+  {
+    width: 100%;
+    height: 546px;
+
+  }
+
+  .item-preview img
+  {
+    height: 100%;
+    width: 100%;
+  }
+
+  .item-preview iframe
+  {
+    height: 100%;
+    width: 100%;
+  }
+
+  .item-preview-list button, .play-btn
+  {
+    height: 106px;
+    width: 190px;
+    margin-top: 6px;
+  }
+
+  .item-preview-enlarge
+  {
+    display: none !important;
+  }
+
+  .item-desc
+  {
+    width: 100%;
+    padding: 0 40px;
+    font-size: 40px;
+    height: auto;
+    padding-bottom: 90px;
+  }
+
+  .item-desc h2
+  {
+    font-size: 60px;
+  }
+
+  .date
+  {
+    font-size: 30px;
+  }
+
+  #catagory button
+  {
+    font-size: 40px;
+    width: 240px;
+  }
+
+  #catagory a, .show-email
+  {
+    font-size: 35px;
+    width: 80px;
+    height: 70px;
+    line-height: 68px;
+  }
+
+  .skills table
+  {
+    max-width: 680px;
+    font-size: 30px;
+  }
+
+  .skills h1
+  {
+    font-size: 60px;
+    margin-left: 10px;
+  }
+
+  .top-content
+  {
+    height: 450px;
+    padding-left: 0px;
+    margin-top: 30px;
+    margin-bottom: 40px;
+  }
+
+  .skills
+  {
+    margin-top: 60px;
+  }
+
+  .profile-img
+  {
+    margin-top:100px !important;
+  }
+
+  .btn
+  {
+    font-size: 40px;
+    padding: 6px 26px;
+  }
+
+  .showcode
+  {
+    width: 360px;
+    margin-right: 30px;
+  }
+
+  .view-item
+  {
+    margin-right: 30px;
+  }
+
+  .code-preview
+  {
+    font-size: 40px;
+  }
+
+  .code-preview img
+  {
+    width: 100%;
+    margin-bottom: 90px;
+  }
+
+  .email
+  {
+    font-size: 50px;
+    height: 100px;
+    line-height: 99px;
+    margin-top: 23px;
+  }
 }
