--- a/css/me.css
+++ b/css/me.css
@@ -1,11 +1,11 @@
 :root
 {
-  --pri: #0f97ed;
-  --bg: #222;
-  --text: #fff;
-  --border: #555;
-  --item_bg: #424042;
-  --bg_faded: rgba(34,34,34,0.78);
+  --pri: #7cccff;
+  --bg: #fff;
+  --text: #000;
+  --border: #eee;
+  --item_bg: #fafafa;
+  --bg_faded: #ffffff;
 }
 
 html{
@@ -14,11 +14,11 @@ html{
 
 body
 {
-  font-family: 'Titillium Web', sans-serif;
+  font-family: 'Barlow', sans-serif;
   padding-bottom: 300px;
   color: var(--text);
   background: var(--bg);
-  background: url(/res/img/bg.jpg) no-repeat center center fixed;
+  /*background: url(/res/img/bg.jpg) no-repeat center center fixed;*/
 }
 
 .hexagon {
@@ -29,8 +29,8 @@ body
   background-image: url(/res/img/profile.png);
   background-size: auto 219.3931px;
   background-position: center;
-  border-left: solid 5px #333333;
-  border-right: solid 5px #333333;
+  border-left: solid 5px var(--border);
+  border-right: solid 5px var(--border);
 }
 
 .hexTop,
@@ -241,7 +241,7 @@ video
 .btn, .btn:active, .btn:hover
 {
   color: var(--text) !important;
-  background: #302d2d;
+  background: var(--item_bg);
 }
 
 .btn:hover
@@ -318,11 +318,11 @@ table
   border-bottom: 1px solid var(--pri);
 }
 
-#catagory button
+.opt
 {
   border: 0px;
   margin-right: -2px;
-  margin-top: 18px;
+  margin-top: 2px;
   font-size: 24px;
   padding: 6px;
   width: 180px;
@@ -335,7 +335,7 @@ table
   height: 45px;
   width: 55px;
   font-size: 24px;
-  margin-top: 18px;
+  margin-top: 2px;
   color: var(--text);
   text-align: center;
   line-height: 45px;
