--- a/css/new.css
+++ b/css/new.css
@@ -8,6 +8,7 @@
   --shadow : #000;
 }
 
+/*Main tags*/
 html{
   font-family: 'Barlow', sans-serif;
   color: var(--text);
@@ -32,23 +33,54 @@ nav{
   border-bottom: 1px solid var(--pri);
 }
 
+/*For youtube videoes*/
 iframe{
   width: 100%;
   height: 100%;
   border: none;
 }
 
+h1{
+  margin-top: 2px;
+}
+
+a{
+  background: var(--bg_alt);
+  color: var(--text);
+}
+
+a:hover, a.active{
+  background: var(--pri);
+  color: var(--bg);
+}
+
+/*
+  Allows elements to be displayed beside
+  eachother in a single row with no spacing
+*/
+.row{
+  display: inline-block;
+  margin-right: -4px;
+  vertical-align: top;
+}
+
+/*
+ ----------- Navbar -----------
+*/
+/*Fixes the navbar to the top of the page*/
 .fixed-nav{
   position: fixed;
   top: 0;
 }
 
+/*Left side of navbar*/
 .nav-con{
   background: var(--bg);
   width: 1070px;
   box-shadow: 0px 3px 12px var(--shadow);
 }
 
+/*graient border under the navbar*/
 .nav-con::after{
   content : "";
   display: block;
@@ -61,6 +93,7 @@ iframe{
   background: linear-gradient(to right, var(--pri) , var(--sec)); /* Standard syntax */
 }
 
+/*Items on left side of navbar*/
 .nav-items{
   display: inline-block;
 }
@@ -74,26 +107,15 @@ iframe{
   text-align: center;
   line-height: 50px;
   font-size: 18px;
-
 }
 
-.nav-items a, .nav-social a{
-  background: var(--bg_alt);
-  color: var(--text);
-}
-
-.nav-items a.active, .nav-items a:hover,
-.nav-social a:hover, .nav-social a.active
-{
-  background: var(--pri);
-  color: var(--bg);
-}
-
+/*Right side of the navbar*/
 .nav-social{
   display: inline-block;
   float: right;
 }
 
+/*Item on right side of the navbar*/
 .nav-social a{
   display: inline-block;
   line-height: 50px;
@@ -105,10 +127,7 @@ iframe{
   margin-right: -1px;
 }
 
-a{
-  color: var(--bg);
-}
-
+/*Profile container*/
 .profile{
   height: 220px;
   width: 1070px;
@@ -116,15 +135,13 @@ a{
   margin-bottom: 60px;
 }
 
-.profile-img, .profile-info{
-  display: inline-block;
-  margin-right: -4;
+/*Left side of the container*/
+.profile-img img{
+  height: 220px;
+  width: 220px;
 }
 
-h1{
-  margin-top: 2px;
-}
-
+/*Right side of the container*/
 .profile-info{
   vertical-align: top;
   padding-left: 70px;
@@ -133,6 +150,7 @@ h1{
   color: var(--bg);
 }
 
+/*Information in the profile*/
 .profile-info table{
   margin-left: 20px;
   color: var(--bg);
@@ -143,11 +161,7 @@ h1{
   padding: 2px 2px;
 }
 
-.profile-img img{
-  height: 220px;
-  width: 220px;
-}
-
+/*Content container*/
 .container{
   margin: 0 auto;
   width: 1070px;
@@ -157,6 +171,11 @@ h1{
   margin-top: 30px;
 }
 
+
+/*
+ ----------- Project Item -----------
+*/
+/*Project item container*/
 .item{
   margin: 8px 0px;
   width: 100%;
@@ -164,17 +183,13 @@ h1{
   background :  var(--bg);
 }
 
+/*Left side of an item*/
 .item-media{
   width: 700px;
   height: 100%;
 }
 
-.row{
-  display: inline-block;
-  margin-right: -4px;
-  vertical-align: top;
-}
-
+/*Right side of an item*/
 .item-info{
   width: 328px;
   height: 100%;
@@ -182,14 +197,10 @@ h1{
   text-align: center;
   padding: 0px 20px;
   clear: left;
-  border-left: 4px solid var(--border);
+  border-left: 4px solid var(--bg_alt);
 }
 
-.item-info ul{
-  text-align: left;
-  line-height: 20px;
-}
-
+/*Large preview image or video*/
 .item-preview{
   height: 390px;
 }
@@ -199,6 +210,7 @@ h1{
   width: 100%;
 }
 
+/*Container for all the media items of this prpject*/
 .media-list{
   height: 90px;
   width: 700px;
@@ -206,6 +218,7 @@ h1{
   padding-left: 1px;
 }
 
+/*A media item*/
 .media-item{
   height: 78px;
   width: 136px;
@@ -227,13 +240,38 @@ h1{
   width: 100%;
 }
 
+/*Right side of a project item container*/
+.item-info ul{
+  text-align: left;
+  line-height: 20px;
+}
+
+/*Project date*/
 .date{
   margin-bottom: 20px;
   height: 20px;
   line-height: 20px;
 }
 
+/*Description of an item*/
 .desc{
   margin-top: 10px;
   font-size: 16px;
+  height: 300px;
+}
+
+/*External links for a project*/
+.item-buttons a{
+  display: inline-block;
+  height: 40px;
+  color: var(--text);
+  text-decoration: none;
+  line-height: 40px;
+  width: 80px;
+  background: var(--bg_alt);
+}
+
+.item-buttons a:hover{
+  background: var(--pri);
+  color: var(--bg);
 }
